--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,17 @@
-{{#if user }}
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{user.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-  </div>
-</div>
-{{/if}}
+<section class="card">
+  <a href="/dashboard/{{id}}">
+    <header>{{name}}</header>
+    <div>
+        <label for="title">title:</label>
+        <input class="form-input" type="text" id="post" />
+      </div>
+      <div class="form-group">
+        <label for="postBody">body:</label>
+        <input class="form-input" type="text" id="postBody" />
+      </div>
+    {{#each post}}
+    <h2>{{title}}</h2>
+    <h3>{{body}}</h3>
+    {{/each}}
+  </a>
+</section>
